Swapping out px for em for font sizes. Fixing jumpy nav issue when zooming on browser.

--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -204,20 +204,20 @@ body {
 
 .legend {
     padding: 6px 8px;
-    font: 14px/16px Arial, Helvetica, sans-serif;
+    font: 1.5em Arial, Helvetica, sans-serif;
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     background: rgba(255,255,255, 0.9);
-    line-height: 18px;
+    line-height: 2em;
     border-radius: 5px;
     color: #555;
     margin-top: 56px !important;
-    width: 155px !important;
+    width: 205px !important;
 }
 
 .legend i {
     color: #777;
-    width: 18px;
-    height: 18px;
+    width: 1.5em;
+    height: 1.5em;
     float: left;
     margin-right: 8px;
     opacity: 0.7;
